[tool.poetry]
name = "torchutils"
version = "0.0.1"
description = "Utilities for pytorch"
authors = ["Nadine Chang <nchang1@andrew.cmu.edu>", "Jayanth Koushik <jnkoushik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.20"
torch = "^1.0.0"
torchvision = "*"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
